--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^4.4.0",
     "express": "^4.18.1",
     "typescript": "^4.8.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
+    "prisma": "^4.4.0",
     "ts-node-dev": "^2.0.0"
   }
 }
