--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@prisma/client": "^4.4.0",
     "express": "^4.18.1",
+    "express-async-errors": "^3.1.1",
     "typescript": "^4.8.4"
   },
   "devDependencies": {
