--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^4.4.0",
+    "bcrypt": "^5.1.0",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
     "typescript": "^4.8.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.14",
+    "@types/jsonwebtoken": "^8.5.9",
     "prisma": "^4.4.0",
     "ts-node-dev": "^2.0.0"
   }
