--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,1 @@
-DATABASE_URL="postgresql://usuario:senha@localhost:5432/dataintegra?schema=public"
+DATABASE_URL="postgresql://postgres:xelos1064@localhost:5432/dataintegra?schema=public"
